--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ nav.it-solution_menu span {
 
 span.bi.bi-sun {
     display: inline-block;
-    background: #043E55;
+    background: #043e55;
     color: #ffff;
     font-size: 18px;
     height: 35px;
@@ -4144,14 +4144,14 @@ p.phone.up {
 .search-box-btn.search-box-outer i {
     cursor: pointer;
     display: inline-block;
-    color: #0a0a0a;
+    color: #dfdddd;
     font-size: 18px;
     opacity: 0.8;
     padding-right: 20px;
 }
 
 .sticky .search-box-btn.search-box-outer i {
-    color: #0a0a0a;
+    color: #0e0e0e;
 }
 
 
