--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1266,6 +1266,7 @@ video {
     font-weight: 600;
     font-family: "Jost";
     margin: 0 0 12px;
+    margin-top: 50px;
 }
 
 .about-text p {
@@ -1276,7 +1277,11 @@ video {
     font-weight: 400;
     margin-top: 15px;
 }
-
+.about-text-text p {
+    width: 100%;
+    margin: 1;
+    text-align: justify;
+}
 .about-us-button {
     padding-top: 20px;
 }
