Abaout Footer Vs1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1978,7 +1978,7 @@ h4.pricing-from {
 
 .blog-button a {
     display: inline-block;
-    background: #043E55;
+    background: #043E555;
     padding: 15px 35px;
     border-radius: 2px;
     transition: .5s;
@@ -2199,7 +2199,7 @@ h4.pricing-from {
 <!-- ============================================================== -->*/
 
 .footer-section {
-    background: #0a1338;
+    background: #043E55;
     padding: 100px 0;
 }
 
