--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,7 +416,7 @@ video {
     z-index: 2;
 }
 
-.hero-content h5:before {
+.hero-content h5::before {
     position: absolute;
     content: "";
     left: 18px;
@@ -427,7 +427,7 @@ video {
     border: 0.5px solid #124736;
 }
 
-.hero-content h5:after {
+.hero-content h5::after {
     position: absolute;
     content: "";
     right: 18px;
@@ -550,7 +550,7 @@ video {
     margin-bottom: 58px;
 }
 
-.section-title h5 {
+.section-title h5:before{
     margin: 0 0 14px;
     font-size: 16px;
     color: #09aff3;
@@ -571,6 +571,13 @@ video {
     border: 1px solid;
     border-color: #043E55;
 }
+
+h5::before,
+h5::after {
+    content: none;
+    display: none;
+}
+
 
 .section-title h5:after {
     position: absolute;
