--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1437,7 +1437,9 @@ h5::after {
 <!-- ============================================================== -->*/
 
 
-
+.hide-element {
+    display: none; /* Esto oculta el elemento */
+}
 
 /*<!-- ============================================================== -->
 <!-- Start it solution testimonial Section  -->
@@ -2785,7 +2787,16 @@ h4.pricing-from {
     color: #0a0a0a;
     font-weight: 600;
     font-family: "Jost";
-    margin: 28px 0 22px;
+    margin: 50px 0 22px;
+    
+}
+.Guaranteed, .quality, .support {
+    display: block; /* Asegura que cada subtítulo ocupe una línea completa */
+    font-size: 20px;
+    color: #0a0a0a;
+    font-weight: 600;
+    font-family: "Jost";
+    margin: 30px 0 10px; /* Margen inferior para espacio entre subtítulo y párrafo */
 }
 
 .services-details-content p {
