--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -543,20 +543,7 @@ video {
     width: 100%;
     transform: scaleX(1);
 }
-.nube-service-img img{
-        border: 2px solid #333; /* Color y grosor del borde */
-        border-radius: 10px; /* Bordes redondeados */
-    }
-.service-details-containers {
-        padding-bottom: 150px; /* Añade espacio debajo de la sección */
-        
-    }
-.service-container-descriptions{
-        background-color: #043c52;
-        color: #fafbfc;
-        opacity: 0.8;
-    }
-    
+
 
 .section-title-service p {
     display: flex;
@@ -573,6 +560,163 @@ video {
 }
 
 
+    /* service-detales-cloud */
+/*=======================*/
+.nube-service-img img{
+    border: 2px solid #333; /* Color y grosor del borde */
+    border-radius: 10px; /* Bordes redondeados */
+}
+.service-details-containers {
+    padding-bottom: 200px; /* Añade espacio debajo de la sección */
+    
+}
+.service-container-descriptions{
+    background-color: #043c52;
+    color: #fafbfc;
+    opacity: 0.8;
+}
+
+ /* service-detales-mobile */
+/*=======================*/
+/* Estilos del contenedor principal */
+.mobile-details-box {
+    display: flex;
+    align-items: flex-start;
+    border-radius: 5px;
+    margin-bottom: 50px;
+    padding: 50px;
+    margin-bottom: 100px;
+    margin-top: 100px;
+    position: relative;
+    z-index: 1;
+}
+
+/* Configura el contenedor interno para alinear imagen y texto en fila */
+.mobile-details-box-cel {
+    display: flex;
+    align-items: flex-start;
+    gap: 0px; /* Espacio entre imagen y texto */
+    flex-direction: row; /* Asegura que la imagen esté a la izquierda */
+    margin-bottom: 100px;
+    margin-top: 90px;
+}
+
+/* Estilos para el contenedor de la imagen */
+.mobile-details-thumb-cel {
+    flex-shrink: 0; /* Evita que la imagen se redimensione demasiado */
+}
+
+/* Control del tamaño de la imagen */
+.mobile-details-thumb-cel img {
+    width: 500px; /* Ajusta el ancho según sea necesario */
+    height: auto;
+    border-radius: 5px;
+    margin: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+    transition: .3s; /* Añade una transición suave si deseas efectos al pasar el mouse */
+}
+
+/* Contenido de texto */
+.mobile-details-content-cel {
+    flex: 1; /* Permite que el texto ocupe el resto del espacio */
+    padding: 0px;
+    margin-left: 0;
+}
+
+.mobile-details-title h2 {
+    margin: 14px 0 20px;
+    font-size: 24px;
+    color: #0d0c0c;
+    font-weight: 500;
+    margin-left: 0;
+  
+}
+
+.mobile-details-title p {
+    font-size: 17px;
+    line-height: 27px;
+    color: #b0b3b6;
+    font-weight: 400;
+    text-align: justify;
+    margin:auto;
+   
+}
+/* service-detales-FinOps */
+/*=======================*/
+/* Estilos del contenedor principal */
+.FinOps-details-box {
+    display: flex;
+    align-items: flex-start;
+    border-radius: 5px;
+    margin-bottom: 50px;
+    padding: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    position: relative;
+    z-index: 1;
+}
+
+/* Configura el contenedor interno para alinear imagen y texto en fila */
+.FinOps-details-box-cel {
+    display: flex;
+    align-items: flex-start;
+    gap: 0px; /* Espacio entre imagen y texto */
+    flex-direction: row; /* Asegura que la imagen esté a la izquierda */
+    margin-bottom: 10px;
+    margin-top: 9px;
+}
+
+/* Estilos para el contenedor de la imagen */
+.FinOps-details-thumb-cel {
+    flex-shrink: 0; /* Evita que la imagen se redimensione demasiado */
+}
+
+/* Control del tamaño de la imagen */
+.FinOps-details-thumb-cel img {
+    width: 500px; /* Ajusta el ancho según sea necesario */
+    height: auto;
+    border-radius: 5px;
+    margin: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+    transition: .3s; /* Añade una transición suave si deseas efectos al pasar el mouse */
+}
+
+/* Contenido de texto */
+.FinOps-details-content-cel {
+    flex: 1; /* Permite que el texto ocupe el resto del espacio */
+    padding: 0px;
+    margin-left: 0;
+}
+
+.FinOps-details-title{
+    margin: 14px 0 20px;
+    margin-right: 30%;
+    background-image: url("../images/resource/dark-counter-bg.png");/* Con esta nomenclatura es que puedo agregarle el backgorud */
+}
+
+.FinOps-details-title h2 {
+    margin: 14px 0 20px;
+    font-size: 24px;
+    color: #0d0c0c;
+    font-weight: 500;
+    margin-left: 0;
+  
+}
+
+.FinOps-details-title p {
+    font-size: 17px;
+    line-height: 27px;
+    color: #b0b3b6;
+    font-weight: 400;
+    text-align: justify;
+    margin:auto;
+    margin-left: 100;
+   
+}
     /* section-title*/
 /*=======================*/
 
@@ -2261,8 +2405,9 @@ h4.pricing-from {
 
 .footer-section {
     background: #043E55;
-    padding: 10px 0;
+    padding: 20px 0px;
     width: 100%;
+    height: 1000%;
 }
 
 .footer-widget-description p {
